tests/snapshots/lib__snapshots__report@random.env_filter.snap
---
source: tracing-filter/tests/snapshots.rs
assertion_line: 74
expression: "~^H#4tNtFch@=?|IK\"-pGKm|TU8T0go!~'g-.f|U-p,Wbvo~:pU%FP)o^EbLsVq5C\\`632Y^LjeQ:_&6']F}!PTbqvr5iUKZPGB=I`p>P-FV+2~B}Ynm_kz_&\"T1@;z5^$s>oghAxDGvLwV QCtYu[svE]l`P\"(>redo\\1S<C#u1hE-7<QwLDJod&+fgt1<XpeiQZD0lh\"u;_{T5{0|X~k@I$1PaMLQ;qtJ:ikhbYVDX_$Df',7`A2_xFbx_uOzPvX4\\Dqq6^ ,9E6rQi>OKjgHWv(V@#7Go-+rveG^tfaIn~:OYNi&.cqz*eEut"
---

  ⚠ 2 directives were ignored as invalid

Error: tracing_filter::simple::Warning::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ ~^H#4tNtFch@=?|IK"-pGKm|TU8T0go!~'g-.f|U-p,Wbvo~:pU%FP)o^EbLsVq5C\`632Y^LjeQ:_&6']F}!PTbqvr5iUKZPGB=I`p>P-FV+2~B}Ynm_kz_&"T1@;z5^$s>oghAxDGvLwV QCtYu[svE]l`P"(>redo\1S<C#u1hE-7<QwLDJod&+fgt1<XpeiQZD0lh"u;_{T5{0|X~k@I$1PaMLQ;qtJ:ikhbYVDX_$Df',7`A2_xFbx_uOzPvX4\Dqq6^ ,9E6rQi>OKjgHWv(V@#7Go-+rveG^tfaIn~:OYNi&.cqz*eEut
   ·              ──────────────┬──────────────
   ·                            ╰── this level filter is invalid
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE
Error: tracing_filter::simple::Warning::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ ~^H#4tNtFch@=?|IK"-pGKm|TU8T0go!~'g-.f|U-p,Wbvo~:pU%FP)o^EbLsVq5C\`632Y^LjeQ:_&6']F}!PTbqvr5iUKZPGB=I`p>P-FV+2~B}Ynm_kz_&"T1@;z5^$s>oghAxDGvLwV QCtYu[svE]l`P"(>redo\1S<C#u1hE-7<QwLDJod&+fgt1<XpeiQZD0lh"u;_{T5{0|X~k@I$1PaMLQ;qtJ:ikhbYVDX_$Df',7`A2_xFbx_uOzPvX4\Dqq6^ ,9E6rQi>OKjgHWv(V@#7Go-+rveG^tfaIn~:OYNi&.cqz*eEut
   ·                                                                                                     ──────────────────────────────────────────────────────────────────────┬──────────────────────────────────────────────────────────────────────
   ·                                                                                                                                                                           ╰── this level filter is invalid
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

