tests/snapshots/lib__snapshots__report@regex.env_filter.snap
---
source: tests/snapshots.rs
assertion_line: 32
expression: "error,hello=warn/[0-9]"
---
(no warnings)
