tests/snapshots/lib__snapshots__simple@big-regex.env_filter.snap
---
source: tests/snapshots.rs
expression: "/(?:){4294967295}"
---


  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::simple::InvalidRegex

  ⚠ invalid regex specified
   ╭────
 1 │ /(?:){4294967295}
   ·  ────────┬───────
   ·          ╰── Compiled regex exceeds size limit of 10485760 bytes.
   ╰────

