tests/snapshots/lib__snapshots__simple@invalid-filter.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate::target=warn/[0-9]/"
---
(compilation failed)


  × logging spec has too many `/`s
   ╭────
 1 │ crate::target=warn/[0-9]/
   ·                    ───┬──
   ·                       │ ╰── this `/` is not allowed ...
   ·                       ╰── ... in this regex filter
   ╰────
  help: regex filters may not contain `/`

