tests/snapshots/lib__snapshots__simple@invalid-target.env_filter.snap
---
source: tests/snapshots.rs
expression: crate=target=warn
---


  ⚠ 1 directives were ignored as invalid

Error: tracing_filter::simple::InvalidLevel

  ⚠ invalid level filter specified
   ╭────
 1 │ crate=target=warn
   ·       ───────────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE

