tests/snapshots/lib__snapshots__simple@levels.env_filter.snap
---
source: tests/snapshots.rs
expression: "off,error,warn,info,debug,trace"
---
trace,
(no warnings)
