tests/snapshots/lib__snapshots__simple@pain.env_filter.snap
---
source: tests/snapshots.rs
expression: "target1[span1],[span2]target2,[span3][span4],[[[[[[span5],[{field1!!!!!!!!!field2=val}]"
---
[span2]target2=trace,[span3][span4]=trace,target1[span1]=trace,[[[[[[span5]=trace,

1 directives were ignored as invalid

  ⚠ invalid level filter specified
   ╭────
 1 │ target1[span1],[span2]target2,[span3][span4],[[[[[[span5],[{field1!!!!!!!!!field2=val}]
   ·                                                                                   ─────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE


