tests/snapshots/lib__snapshots__simple@parse_spec_global.env_filter.snap
---
source: tests/snapshots.rs
expression: "warn,crate2=debug"
---
crate2=debug,warn,
(no warnings)
