tests/snapshots/lib__snapshots__simple@parse_spec_invalid_crate.env_filter.snap
---
source: tests/snapshots.rs
expression: "crate1::mod1=warn=info,crate2=debug"
---
crate2=debug,

1 directives were ignored as invalid

  ⚠ invalid level filter specified
   ╭────
 1 │ crate1::mod1=warn=info,crate2=debug
   ·              ─────────
   ╰────
  help: valid level filters are OFF, ERROR, WARN, INFO, DEBUG, or TRACE


